2006-02-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock):
	Ugh.. getting late I guess...

2006-02-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_provide_clock),
	(gst_base_audio_sink_set_property),
	(gst_base_audio_sink_get_property), (gst_base_audio_sink_render):
	Don't try to provide a clock when we are not negotiated since
	we might not be able to make it run.

2006-02-02  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gstdecodebin.c: (try_to_link_1):
	  Unlinking two source pads is ... hard.

2006-02-02  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/TODO:
	Updated.

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_drain), (gst_base_audio_sink_event):
	On EOS, wait till the last sample is played before posting EOS.

2006-02-01  Philippe Kalaf <burger at speedy dot org>

	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	  Patch by Kai Vehmanen : Adds ability to enable newsegment bypass by
	  setting queue_delay to zero. Also avoid thread being started if
	  queue_delay is zero.

2006-02-01  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/test6.c: (new_decoded_pad_cb), (show_error), (main):
	  Make test work again by connecting fakesinks to each decoded pad,
	  which makes the pipeline wait until each fakesink has a buffer
	  queued before going to PAUSED state. At that point we know the
	  decodebin pads are negotiated.

2006-02-01  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/cdda/gstcddabasesrc.c: (gst_cdda_base_src_query),
	(gst_cdda_base_src_handle_event):
	* gst/audiotestsrc/gstaudiotestsrc.c: (gst_audio_test_src_query):
	  Pass unhandled queries to the parent class's query function.

2006-02-01  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_query_types),
	(gst_ogg_pad_src_query):